Adding Tom's micromet section
still working on citations here

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -598,6 +598,41 @@
   file = {/Users/nidhivinod/Zotero/storage/AG9SE3IS/Baldocchi et al. - 1997 - Seasonal variation of energy and water vapor excha.pdf}
 }
 
+@article{baldocchiSpectralLagcorrelationAnalysis1988,
+  title = {A Spectral and Lag-Correlation Analysis of Turbulence in a Deciduous Forest Canopy},
+  author = {Baldocchi, Dennis D. and Meyers, Tilden P.},
+  date = {1988-10-01},
+  journaltitle = {Boundary-Layer Meteorol},
+  volume = {45},
+  number = {1},
+  pages = {31--58},
+  issn = {1573-1472},
+  doi = {10.1007/BF00120814},
+  url = {https://doi.org/10.1007/BF00120814},
+  urldate = {2022-01-18},
+  abstract = {The processes influencing turbulence in a deciduous forest and the relevant length and time scales are investigated with spectral and cross-correlation analysis. Wind velocity power spectra were computed from three-dimensional wind velocity measurements made at six levels inside the plant canopy and at one level above the canopy. Velocity spectra measured within the plant canopy differ from those measured in the surface boundary layer. Noted features associated with the within-canopy turbulence spectra are: (a) power spectra measured in the canopy crown peak at higher wavenumbers than do those measured in the subcanopy trunkspace and above the canopy; (b) peak spectral values collapse to a relatively universal value when scaled according to a non-dimensional frequency comprised of the product of the natural frequency and the Eulerian time scale for vertical velocity; (c) at wavenumbers exceeding the spectral peak, the slopes of the power spectra are more negative than those observed in the surface boundary layer; (d) Eulerian length scales decrease with depth into the canopy crown, then increase with further depth into the canopy; (e) turbulent events below crown closure are more correlated with turbulent events above the canopy than are those occurring in the canopy crown; and (f) Taylor's frozen eddy hypothesis is not valid in a plant canopy. Interactions between plant elements and the mean wind and turbulence alter the processes that produce, transport and remove turbulent kinetic energy and account for the noted observations.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/JDSEHHZW/Baldocchi and Meyers - 1988 - A spectral and lag-correlation analysis of turbule.pdf}
+}
+
+@article{baldocchiTraceGasExchange1991,
+  title = {Trace Gas Exchange above the Floor of a Deciduous Forest: 1. {{Evaporation}} and {{CO2}} Efflux},
+  shorttitle = {Trace Gas Exchange above the Floor of a Deciduous Forest},
+  author = {Baldocchi, Dennis D. and Meyers, Tilden P.},
+  date = {1991},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {96},
+  number = {D4},
+  pages = {7271--7285},
+  issn = {2156-2202},
+  doi = {10.1029/91JD00269},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/91JD00269},
+  urldate = {2022-01-18},
+  abstract = {The eddy correlation method has great potential for directly measuring trace gas fluxes at the floor of a forest canopy, but a thorough validation study has not been yet conducted. Another appeal of the eddy correlation method is its ability to study processes that regulate and modulate gas exchange between the soil/litter complex and the atmosphere that cannot be probed with chambers. In this paper we report on eddy correlation measurements of water vapor, sensible heat, and carbon dioxide exchange that were made at the floor of a deciduous forest. The validity of the eddy correlation method to measure the emission of water vapor and CO2 from a deciduous forest floor is demonstrated by our ability to close the surface energy budget during periods that meet the requirements of the technique. Water vapor fluxes from a dry forest floor are strongly influenced by large-scale turbulent events that penetrate deep into the canopy. The frequency of these turbulent events prevents equilibrium evaporation rates from being achieved because the dynamic time constant for water vapor exchange is longer. Consequently, maximal evaporation rates are capped to rates defined by the product of the driving potential of the atmosphere and the surface conductance. On the other hand, evaporation from a wet forest floor proceeds at rates reaching or exceeding equilibrium evaporation and are highly correlated with static pressure fluctuations. CO2 efflux rates are governed by litter and soil temperature, as expected. But we also find a significant correlation between static pressure fluctuations and soil/litter CO2 exchange rates.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/91JD00269}
+}
+
 @article{ballMaintenanceLeafTemperature1988,
   title = {Maintenance of {{Leaf Temperature}} and the {{Optimisation}} of {{Carbon Gain}} in {{Relation}} to {{Water Loss}} in a {{Tropical Mangrove Forest}}},
   author = {Ball, M. C. and Cowan, I. R. and Farquhar, G. D.},
@@ -2397,6 +2432,23 @@
   file = {/Users/nidhivinod/Zotero/storage/59F89VNI/Demmig-Adams - 1998 - Survey of Thermal Energy Dissipation and Pigment C.pdf;/Users/nidhivinod/Zotero/storage/G33I4WLW/1850683.html}
 }
 
+@article{denmeadScalarTransportPlant1987,
+  title = {On {{Scalar Transport}} in {{Plant Canopies}}},
+  author = {Denmead, O. T. and Bradley, E. F.},
+  date = {1987-06-01},
+  journaltitle = {Irrig Sci},
+  volume = {8},
+  number = {2},
+  pages = {131--149},
+  issn = {1432-1319},
+  doi = {10.1007/BF00259477},
+  url = {https://doi.org/10.1007/BF00259477},
+  urldate = {2022-01-18},
+  abstract = {We examine the notion that scalars are transported along their mean concentration gradients in the air space of the canopy. Recent observations and theory indicate that this concept is both inappropriate and misleading. Independent measurements of the fluxes and gradients of heat, water vapour and CO2 in a forest canopy show that counter-gradient fluxes are common. The intermittency of the transport processes and their large scale are seen as important reasons for this.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/ZSYBP966/Denmead and Bradley - 1987 - On Scalar Transport in Plant Canopies.pdf}
+}
+
 @article{depurySimpleScalingPhotosynthesis1997,
   title = {Simple Scaling of Photosynthesis from Leaves to Canopies without the Errors of Big-Leaf Models},
   author = {De Pury, D. G. G. and Farquhar, G. D.},
@@ -3062,6 +3114,14 @@
   abstract = {Heat wave frequency, duration, and intensity are predicted to increase with global warming, but the potential impacts of short‐term high temperature events on forest functioning remain virtually unst...},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/F9PXHZ59/gcb.html}
+}
+
+@misc{finniganTurbulence2009,
+  title = {Turbulence},
+  author = {Finnigan, John J. and Shaw, Roger H. and {Edward} and Patton, G.},
+  date = {2009},
+  abstract = {structure above a vegetation canopy},
+  file = {/Users/nidhivinod/Zotero/storage/FBX64J2N/Finnigan et al. - 2009 - Turbulence.pdf}
 }
 
 @article{fisherECOSTRESSNASANext2020,
@@ -4086,6 +4146,23 @@
   file = {/Users/nidhivinod/Zotero/storage/JKG8AUNC/Harley et al. - 1997 - Environmental controls over isoprene emission in d.pdf}
 }
 
+@article{harmanSimpleUnifiedTheory2007,
+  title = {A Simple Unified Theory for Flow in the Canopy and Roughness Sublayer},
+  author = {Harman, Ian N. and Finnigan, John J.},
+  date = {2007-05-01},
+  journaltitle = {Boundary-Layer Meteorol},
+  volume = {123},
+  number = {2},
+  pages = {339--363},
+  issn = {1573-1472},
+  doi = {10.1007/s10546-006-9145-6},
+  url = {https://doi.org/10.1007/s10546-006-9145-6},
+  urldate = {2022-01-18},
+  abstract = {The mean flow profile within and above a tall canopy is well known to violate the standard boundary-layer flux–gradient relationships. Here we present a theory for the flow profile that is comprised of a canopy model coupled to a modified surface-layer model. The coupling between the two components and the modifications to the surface-layer profiles are formulated through the mixing layer analogy for the flow at a canopy top. This analogy provides an additional length scale—the vorticity thickness—upon which the flow just above the canopy, within the so-called roughness sublayer, depends. A natural form for the vertical profiles within the roughness sublayer follows that overcomes problems with many earlier forms in the literature. Predictions of the mean flow profiles are shown to match observations over a range of canopy types and stabilities.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/Y7JQLIPJ/Harman and Finnigan - 2007 - A simple unified theory for flow in the canopy and.pdf}
+}
+
 @article{harrisChangesLeafProperties2013,
   title = {Changes in Leaf Properties across an Elevation Gradient in the {{Luquillo Mountains}}, {{Puerto Rico}}},
   author = {Harris, Nancy L. and Medina, Ernesto},
@@ -4873,6 +4950,24 @@
   abstract = {In the 20th century, annual mean temperatures in the European Alps rose by almost 1\,K and are predicted to rise further, increasing the impact of temperature on alpine plants. The role of light in th...},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/WVMLQPHE/Karadar et al. - 2018 - Solar irradiation levels during simulated long‐ an.pdf}
+}
+
+@article{katulModelingCO2Sources1999,
+  title = {Modeling {{CO2}} Sources, Sinks, and Fluxes within a Forest Canopy},
+  author = {Katul, Gabriel G. and Albertson, John D.},
+  date = {1999},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {104},
+  number = {D6},
+  pages = {6081--6091},
+  issn = {2156-2202},
+  doi = {10.1029/1998JD200114},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/1998JD200114},
+  urldate = {2022-01-18},
+  abstract = {A practical method to infer CO2 sources, sinks, and fluxes from measured mean concentration profiles is proposed and field-tested in a uniform pine forest using eddy covariance measurements. The proposed method computes the velocity statistics from a second-order closure model and uses these statistics to infer profiles of scalar fluxes using a scalar-flux budget. The model input requirements are leaf area density profile, mean shear stress at the canopy top, and measured concentration profiles within and just above the canopy. In contrast to the localized near-field (LNF) theory the model does not assume zero vertical velocity skewness, negligible advective effects, and local vertical homogeneity in the near-field concentration. The model results compared well with eddy covariance CO2 flux measurements inside the canopy and reproduced qualitatively much of the physiologically known daytime evolution of the CO2 source-sink profile.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/1998JD200114},
+  file = {/Users/nidhivinod/Zotero/storage/HENAWI96/Katul and Albertson - 1999 - Modeling CO2 sources, sinks, and fluxes within a f.pdf}
 }
 
 @article{keenanGlobalLeafTrait2016,
@@ -7071,6 +7166,22 @@
   file = {/Users/nidhivinod/Zotero/storage/AJRPX33T/Messier et al. - 1998 - Effects of overstory and understory vegetation on .pdf;/Users/nidhivinod/Zotero/storage/E73XNZ92/3237266.html}
 }
 
+@article{meyersModellingPlantCanopy1987,
+  title = {Modelling the Plant Canopy Micrometeorology with Higher-Order Closure Principles},
+  author = {Meyers, Tilden P. and Paw U, Kyaw Tha},
+  date = {1987-10-01},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {41},
+  number = {1},
+  pages = {143--163},
+  issn = {0168-1923},
+  doi = {10.1016/0168-1923(87)90075-X},
+  url = {https://www.sciencedirect.com/science/article/pii/016819238790075X},
+  urldate = {2022-01-18},
+  abstract = {A canopy microenvironment turbulence model, based on higher-order closure principles, is presented. The model consists of equations for the mean quantities and their vertical turbulent fluxes. Approximate equations for the triple correlations are incorporated to bypass the need to make parameterizations for the triple correlations based on gradient diffusion assumptions. A canopy radiative transfer model provides the necessary information to a leaf energy balance equation which partitions the net absorbed energy into sensible and latent heat emission rates. The model is shown to simulate the microenvironment of a stressed and non-stressed soybean canopy, with good agreement between modelled and measured mean temperature, specific humidity, net radiation and mean wind speed profiles. A comparison of the terms in the budget equations for the tangential stress, turbulent kinetic energy, and heat flux shows favorable agreement with results from recent wind tunnel studies.},
+  langid = {english}
+}
+
 @article{michaletzEnergeticCarbonEconomic2016a,
   title = {The Energetic and Carbon Economic Origins of Leaf Thermoregulation},
   author = {Michaletz, Sean T. and Weiser, Michael D. and McDowell, Nate G. and Zhou, Jizhong and Kaspari, Michael and Helliker, Brent R. and Enquist, Brian J.},
@@ -8503,6 +8614,24 @@
   file = {/Users/nidhivinod/Zotero/storage/CB2DRMZS/Pearson - 1971 - Vertical Stratification of Birds in a Tropical Dry.pdf}
 }
 
+@article{penmanWeatherWheatEssay1960,
+  title = {Weather in Wheat : {{An}} Essay in Micro-Meteorology},
+  shorttitle = {Weather in Wheat},
+  author = {Penman, H. L. and Long, I. F.},
+  date = {1960},
+  journaltitle = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {86},
+  number = {367},
+  pages = {16--50},
+  issn = {1477-870X},
+  doi = {10.1002/qj.49708636703},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/qj.49708636703},
+  urldate = {2022-01-18},
+  abstract = {Data for three summers (1955-1957) are presented, obtained from continuous recorders responding to temperature, humidity and wind in and above the wheat crop at levels up to about 2 m. Section 1 gives a brief account of the instruments (see Long, Q.J. 83, p. 202 for details). § 2 a description of the site, 70 × 70 m, which may have been too small for full development of profiles. § 3 (from 1955) shows that planting density affects the daily cycles of temperature and humidity in the crop, a thin crop having a lower average relative humidity and a shorter period of saturation on a dew night. Such a night is characterized by a humidity lapse between ground and canopy, and a humidity inversion above the canopy. On the exceptional occasion illustrated, both the up flux and the down flux may have reached a maximum rate of about 3 mg ground cm−2 hr−1. An adventitious air-temperature ripple during a calm night is exploited to derive rough estimates of transport constant in a dense crop : near the ground it approached the molecular thermal diffusivity for air. § 4 (from 1956) displays anomalies in temperature and humidity profiles that can arise from interpolating readings within the 400 sec cycle of the recorders. It also gives soil temperature records from which estimates of soil thermal diffusivity, and soil heat flux, are made, indicating that on the first sunny June day after rain there may be a net heat flux into the ground of about 30 cal cm−2 : the equivalent of 0·5 mm of evaporation. From an energy balance further rough estimates of heat transport constant within the crop are found to be of order 2 to 20 cm2 sec−1 depending on height and external wind speed. The anomalies in profiles are attributed partly to periodicities in the air parameters almost identical with that of the recording instruments, and partly (§ 5, from 1957) to long-persisting differences in temperature and humidity at constant level across the site. Within the crop an average temperature difference of 0·8°C may persist for four hours at positions 8 m apart (and a vapour-pressure difference of 1·0 mb), and these ‘hot’ and ‘damp’ spots - not always coincident - move slowly during the day. The differences are smaller above the crop where mixing is more thorough. These differences swamp any that might be due to advective effects, and raise doubts about the meaning of ‘a profile’ over a tall crop. § 6, introduces an analytical Part II which uses the data from a period of eight days (12–19 June 1957). of fine weather after rain, discusses the generalized profile equation \textbackslash documentclassarticle\textbackslash pagestyleempty\textbackslash begindocument\$\$ u = \textbackslash fracu\_* k\textbackslash alpha \{ (\textbackslash fracz - dz\_0 )\^\textbackslash alpha - 1\} \$\$\textbackslash enddocument (reducing to the standard logarithmic profile when α = 0) : measurements of temperature and humidity are not accurate enough to determine α for their profiles, and the swaying of the crop necessitates use of long-period averages of wind speed before α can be determined for wind profiles. Working on 4-hr periods (00-04, 04-08 and so on) it is found (§ 7) that profiles above the crop can be fitted either with α = 0, or a value of α chosen from the Deacon curve of 1 – α against Richardson number. Values for a crop height of about 60 cm, with heat transfer (Qs) and evaporation rates (E) from later sections, are: The discrepancy in u*/k during the first period corresponds to a 12-fold estimated shearing stress. Wind profiles in the crop have a completely different shape in calm and windy weather, in the sense that near the ground the absolute wind speed tends to be constant: the crop behaves as though self-sealing.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49708636703}
+}
+
 @article{pereiraSituVariationLeaf2009,
   title = {In Situ Variation in Leaf Anatomy and Morphology of {{Andira}} Legalis ({{Leguminosae}}) in Two Neighbouring but Contrasting Light Environments in a {{Brazilian}} Sandy Coastal Plain},
   author = {Pereira, Daniela Carvalho and Barros, Cláudia Franca and Scarano, Fabio Rubio},
@@ -9088,6 +9217,23 @@
   file = {/Users/nidhivinod/Zotero/storage/DVI3HWHK/Rambo and North - 2009 - Canopy microclimate response to pattern and densit.pdf}
 }
 
+@article{raupachAveragingProceduresFlow1982,
+  title = {Averaging Procedures for Flow within Vegetation Canopies},
+  author = {Raupach, M. R. and Shaw, R. H.},
+  date = {1982-01-01},
+  journaltitle = {Boundary-Layer Meteorol},
+  volume = {22},
+  number = {1},
+  pages = {79--90},
+  issn = {1573-1472},
+  doi = {10.1007/BF00128057},
+  url = {https://doi.org/10.1007/BF00128057},
+  urldate = {2022-01-18},
+  abstract = {Most one-dimensional models of flow within vegetation canopies are based on horizontally averaged flow variables. This paper formalizes the horizontal averaging operation. Two averaging schemes are considered: pure horizontal averaging at a single instant, and time averaging followed by horizontal averaging. These schemes produce different forms for the mean and turbulent kinetic energy balances, and especially for the ‘wake production’ term describing the transfer of energy from large-scale motion to wake turbulence by form drag. The differences are primarily due to the appearance, in the covariances produced by the second scheme, of dispersive components arising from the spatial correlation of time-averaged flow variables. The two schemes are shown to coincide if these dispersive fluxes vanish.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/WGMPQV6D/Raupach and Shaw - 1982 - Averaging procedures for flow within vegetation ca.pdf}
+}
+
 @article{raupachCoherentEddiesTurbulence1996,
   title = {Coherent Eddies and Turbulence in Vegetation Canopies: {{The}} Mixing-Layer Analogy},
   shorttitle = {Coherent Eddies and Turbulence in Vegetation Canopies},
@@ -9099,6 +9245,23 @@
   doi = {10.1007/BF00120941},
   abstract = {This paper argues that the active turbulence and coherent motions near the top of a vegetation canopy are patterned on a plane mixing layer, because of instabilities associated with the characteristic strong inflection in the mean velocity profile. Mixing-layer turbulence, formed around the inflectional mean velocity profile which develops between two coflowing streams of different velocities, differs in several ways from turbulence in a surface layer. Through these differences, the mixing-layer analogy provides an explanation for many of the observed distinctive features of canopy turbulence. These include: (a) ratios between components of the Reynolds stress tensor; (b) the ratio K-H/K-M of the eddy diffusivities for heat and momentum; (c) the relative roles of ejections and sweeps; (d) the behaviour of the turbulent energy balance, particularly the major role of turbulent transport; and (e) the behaviour of the turbulent length scales of the active coherent motions (the dominant eddies responsible for vertical transfer near the top of the canopy). It is predicted that these length scales are controlled by the shear length scale L(s)=U(h)/U'(h) (where h is canopy height, U(z) is mean velocity as a function of height z, and U'=dU/dz). In particular, the streamwise spacing of the dominant canopy eddies is Lambda(x)=mL(s), with m=8.1. These predictions are tested against many sets of field and wind-tunnel data. We propose a picture of canopy turbulence in which eddies associated with inflectional instabilities are modulated by larger-scale, inactive turbulence, which is quasi-horizontal on the scale of the canopy.},
   file = {/Users/nidhivinod/Zotero/storage/NG4Z38PE/Raupach et al. - 1996 - Coherent eddies and turbulence in vegetation canop.pdf}
+}
+
+@article{raupachLagrangianAnalysisScalar1987,
+  title = {A Lagrangian Analysis of Scalar Transfer in Vegetation Canopies},
+  author = {Raupach, M. R.},
+  date = {1987},
+  journaltitle = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {113},
+  number = {475},
+  pages = {107--120},
+  issn = {1477-870X},
+  doi = {10.1002/qj.49711347507},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/qj.49711347507},
+  urldate = {2022-01-18},
+  abstract = {To study the dispersion of scalar trace constituents such as heat, water vapour or CO2 from extensive sources within vegetation canopies, a Lagrangian approach is essential because of the need to account for the influence of travel time (as a fraction of the Lagrangian time scale) on the dispersion properties of marked fluid particles. A simple, analytic Lagrangian theory is developed for a canopy in which the turbulence is homogeneous. For a given scalar source distribution, predictions are obtained for mean scalar concentration, vertical flux, terms in the balance equation for vertical flux, and vertical diffusivities at first, second and third order. the predictions agree remarkably well with measurements of dispersion from an elevated plane source within a model plant canopy in a wind tunnel. the theory also explains the countergradient heat and CO2 fluxes observed in real forest canopies.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347507}
 }
 
 @article{readComparativeResponsesTemperature1990,
@@ -9542,6 +9705,21 @@
   langid = {english},
   keywords = {<i>Dalbergia</i>,<i>Shorea</i>,<i>Xylia</i>,Dipterocarpaceae,Thailand forests,woody legumes},
   file = {/Users/nidhivinod/Zotero/storage/23QRUC67/Rundel et al. - 2017 - Seasonal Water Relations and Leaf Temperature in a.pdf;/Users/nidhivinod/Zotero/storage/5YT9NSKY/368.html}
+}
+
+@book{russellPlantCanopiesTheir1989,
+  title = {Plant Canopies: Their Growth, Form, and Function},
+  shorttitle = {Plant Canopies},
+  editor = {Russell, G. and Marshall, B. and Jarvis, P. G. and Society for Experimental Biology (Great Britain) and Society for Experimental Biology (Great Britain)},
+  date = {1989},
+  series = {Society for {{Experimental Biology}} Seminar Series},
+  number = {31},
+  publisher = {{Cambridge University Press}},
+  location = {{Cambridge [England] ; New York}},
+  isbn = {978-0-521-32838-8 978-0-521-39563-2},
+  pagetotal = {178},
+  keywords = {Congresses,Plant canopies,Plants Leaves},
+  annotation = {OCLC: 17227682}
 }
 
 @article{russellResidenceTimesDecay2014,
@@ -10321,6 +10499,17 @@
   urldate = {2021-07-29},
   abstract = {Some, but not all, plants emit isoprene. Emission of the related monoterpenes is more universal among plants, but the amount of isoprene emitted from plants dominates the biosphere–atmosphere hydrocarbon exchange.The emission of isoprene from plants affects atmospheric chemistry. Isoprene reacts very rapidly with hydroxyl radicals in the atmosphere making hydroperoxides that can enhance ozone formation. Aerosol formation in the atmosphere may also be influenced by biogenic isoprene. Plants that emit isoprene are better able to tolerate sunlight-induced rapid heating of leaves (heat flecks). They also tolerate ozone and other reactive oxygen species better than non-emitting plants. Expression of the isoprene synthase gene can account for control of isoprene emission capacity as leaves expand. The emission capacity of fully expanded leaves varies through the season but the biochemical control of capacity of mature leaves appears to be at several different points in isoprene metabolism.The capacity for isoprene emission evolved many times in plants, probably as a mechanism for coping with heat flecks. It also confers tolerance of reactive oxygen species. It is an example of isoprenoids enhancing membrane function, although the mechanism is likely to be different from that of sterols. Understanding the regulation of isoprene emission is advancing rapidly now that the pathway that provides the substrate is known.},
   file = {/Users/nidhivinod/Zotero/storage/L7DAIMPF/Sharkey et al. - 2008 - Isoprene Emission from Plants Why and How.pdf}
+}
+
+@article{shawSecondaryWindSpeed1977,
+  title = {Secondary {{Wind Speed Maxima Inside Plant Canopies}}},
+  author = {Shaw, Roger},
+  date = {1977-05-01},
+  journaltitle = {Journal of Applied Meteorology},
+  volume = {16},
+  pages = {514--521},
+  doi = {10.1175/1520-0450(1977)016<0514:SWSMIP>2.0.CO;2},
+  file = {/Users/nidhivinod/Zotero/storage/VLLT8ZTI/Shaw - 1977 - Secondary Wind Speed Maxima Inside Plant Canopies.pdf}
 }
 
 @article{shugartGapModelsTheir2018,
